@startuml

title __CSHARP's Class Diagram__\n

  package  {
    package com.samsung.tcm {
      package com.samsung.tcm.analysis.csharp {
        class CSharpTestCaseAnalysisHelper {
            + CSharpTestCaseAnalysisHelper()
            + buildParseTreeMap()
            + buildParseTreeMapPos()
            + buildParseTreeMapNeg()
        }
      }
    }
  }
  

  package  {
    package com.samsung.tcm {
      package com.samsung.tcm.analysis.csharp {
        class CSharpTestCaseAnalyzer {
            - isSimpleCalc : boolean
            - isInMethodBody : boolean
            - isInNamespaceDecl : boolean
            - isInMethodDecl : boolean
            - isInMethodDeclParams : boolean
            - isInInvocation : boolean
            - needCheckAttribute : boolean
            - needCheckForTCInAttribute : boolean
            - needCheckForPosTCInAttribute : boolean
            - needCheckForNegTCInAttribute : boolean
            - needCheckForTCInMethodName : boolean
            - needCheckForPosTCInMethodName : boolean
            - needCheckForNegTCInMethodName : boolean
            - namespaceIdentifier : String
            - callees : ArrayList<TestCaseCalleeInMethod>
            + CSharpTestCaseAnalyzer()
            + enterNamespace_declaration()
            + enterQualified_identifier()
            + enterNamespace_body()
            + enterType_declaration()
            + enterClass_member_declaration()
            + enterAttribute()
            + enterMethod_declaration()
            + enterMethod_member_name()
            + enterFormal_parameter_list()
            + enterType()
            + exitFormal_parameter_list()
            + enterMethod_body()
            + enterMethod_invocation()
            + enterArgument()
            + exitMethod_invocation()
            + exitMethod_body()
            - initForMethodLevel()
            + exitNamespace_body()
            - matchWithSchemaIdentifiers()
            + isSimpleCalc()
            + setSimpleCalc()
            - calcSimpleLoc()
            - calcLogicalLoc()
        }
      }
    }
  }
  

  package  {
    package com.samsung.tcm {
      package com.samsung.tcm.analysis.csharp {
        class CSharpTestFilePreprocessor {
            {static} + preProcess()
        }
      }
    }
  }
  

  CSharpTestCaseAnalysisHelper -up-|> TestCaseAnalysisHelper
  CSharpTestCaseAnalyzer -up-|> CSharpParserBaseListener
  CSharpTestCaseAnalyzer o-- CSharpCounter : locCounter
  CSharpTestCaseAnalyzer o-- StringSearcher : searcher
  CSharpTestCaseAnalyzer o-- CSharpTestCaseAnalysisHelper : helper
  CSharpTestCaseAnalyzer o-- SCAssertion : assertions
  CSharpTestCaseAnalyzer o-- MethodAnalysisResult : methodAnalysisResult
  CSharpTestCaseAnalyzer o-- TestCaseCalleeInMethod : callee


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
